tests/NormalTests/paczka1/fuzzy1/62458472.err
Error in line 3: RO6QpC8DS S165 83,4
Error in line 17: 4eGfCM S9 71,0
Error in line 22: RO6QpC8DS A70 25,8
Error in line 26: 1PuINCbn S165 80,8
Error in line 24: MAZcO A70 49,2
Error in line 28: MYnm A94 11,9
Error in line 38: PCqoCv S165 7,8
